--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Ny Havana</title>
   </head>
-  <body style="background-color:#1C0A43" class="font-poppins ">
+  <body style="background-color:#1C0A43" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
